set allowdownload to false

--- a/frontend/config/templates/static/editMediaPage.html
+++ b/frontend/config/templates/static/editMediaPage.html
@@ -25,7 +25,7 @@
             <div id="div_id_category" class="control-group">
               <label for="id_category" class="control-label"> Category </label>
               <div class="controls">
-                <select name="category" class="selectmultiple" id="id_category" multiple="">
+                <select name="category" class="selectmultiple" id="id_category" multiple=""><!-- The categories are configured in the /admin page -->
                   <option value="1">Art</option>
                   <option value="2">Documentary</option>
                   <option value="3">Experimental</option>
